# events_parser

./: .env  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
clickhouse_cfg/: users.xml
src/: config.py  db_client.py  events_collector.py  main.py
