[tool.poetry]
name ="Events parser"
version = "0.1.0"
description = "Events parser for sysmon windows events"
authors = ["author <i.pestretsov@outlook.com>"]

[tool.poetry.dependencies]
python = "3.10.6"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
clickhouse-driver = "^0.2.6"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
flake8 = "*"
mypy = "*"
pylint = "*"
pydocstyle = "*"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
follow_imports = "silent"
disallow_untyped_defs = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.3.1"]
build-backend = "poetry.core.masonry.api"
